[project]
name = "web_list"
version = "1"
description = "SImple web page"
authors = [
    {name = "Fedor Baskaev", email = "xbaskaev@mendelu.cz"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
